--- a/build.gradle
+++ b/build.gradle
@@ -9,11 +9,22 @@ repositories {
     mavenCentral()
 }
 
+sourceCompatibility = 17
+targetCompatibility = 17
+
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
 }
 
 test {
     useJUnitPlatform()
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'org.file.system.Main'
+    }
 }
